--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ requires-python = ">=3.9"
 dependencies = [
   "openai>=1.0.0",
   "prompt-toolkit>=3.0.0",
+  "loguru>=0.7.2",
+  "tomli>=2.0.1; python_version < \"3.11\"",
 ]
 
 [project.scripts]
